# spotify-polybar

./: Cargo.toml  LICENSE  README.md
src/: main.rs
