[package]
name = "spotify-polybar"
version = "0.1.0"
authors = ["Spike Grobstein <me@spike.cx>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.13", features = ["client-reqwest", "reqwest-rustls-tls", "cli"] }
tokio = { version = "1", features = ["full"] }
anyhow = "^1.0"
clap = { version = "2.33.1", features = [ "color" ] }
